# multi-agent-coordinate-

./: .gitignore  README.md  main.py  pyproject.toml
agents/: __init__.py  coder.py  integrator.py  reviewer.py
browser_agents/: __init__.py  base.py  chatgpt.py  claude_code_web.py  claude_web.py  grok.py
config/: cross_session_harness.yaml  default_harness.yaml
dispatcher/: __init__.py
examples/: cross_session_demo.py  natural_language_demo.py  quick_start.py  self_loop_demo.py
gateway/: __init__.py  telegram_bot.py
harness/: __init__.py  agent.py  core.py  evaluator.py  loop.py  orchestrator.py  protocol.py  task.py
harness/channels/: __init__.py  api_channel.py  file_channel.py  git_channel.py
harness/memory/: __init__.py  store.py
harness/templates/: claude_code_harness.yaml
pipeline/: __init__.py  git_merger.py  orchestrator.py
skills/: harness_skill.md
tg_bot_integration/: INSTALL.md  claude_agent_patched.py  deploy_no_api.py  deploy_to_bot.py  diagnose.py  harness_mode.py  harness_prompt.py  quota_tracker.py  selftest_loop.py  setup_and_start.py  system_prompt_patch.py  web_ai.py
tracker/: __init__.py  quota.py  session_store.py
